# taoguba-agent

./: .gitignore  CLAUDE.md  README.md  filter.py  llm_extractor.py  main.py  news_filter_20260309.md  notifier.py  requirements.txt  skill-taoguba-complete.md
.obsidian/: app.json  appearance.json  core-plugins.json
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/: README.md  cli.py  config.yaml.example  pyproject.toml  simple_test.py  test_import.py
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/prompts/consecutive_board/: analysis.txt  system.txt
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/prompts/critic/: analysis.txt  system.txt
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/prompts/synthesis/: analysis.txt  system.txt
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/prompts/trend_stock/: analysis.txt  system.txt
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/src/: __init__.py
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/src/agent/: __init__.py  consecutive_board_agent.py  critic_agent.py  synthesis_agent.py  trend_stock_agent.py
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/src/analysis/: __init__.py  indicator_calculator.py  indicator_calculator.py.bak  sector_comparator.py  special_action_detector.py
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/src/llm/: __init__.py  base.py  client.py  prompt_engine.py
2-Projects/量化交易/量化交易1/Ashare复盘multi-agents/stock_replay_agent/src/models/: __init__.py  stock_models.py
(+978 files in other folders)
