[project]
name = "stock-replay-agent"
version = "0.1.0"
description = "核心个股复盘智能体阵列"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "zhipuai>=0.1.0",
    "akshare>=1.12.0",
    "openai>=1.0.0",
    "httpx",
    "beautifulsoup4",
    "requests",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
